# app_django_boilerplate

./: .dockerignore  .env  .env_example  .env_local  .gitignore  Administrators_accessKeys.csv  Dockerfile  README.md  _ext_registry.py  db.sqlite3  db.sqlite3.backup  default_realm.json  docker-compose.yaml  env_example  manage.py  pyproject.toml  requirements.txt  requirments.txt
App_CRUD/: admin.py  apps.py  urls.py  views_CRUD.py
App_CRUD/migrations/: 0001_initial.py
App_Data_Table/: apps.py  models.py  views2.py
App_Data_Table/migrations/: 0001_initial.py
Project_Django_Boilerplate_GAP/: API_Talk.sh  __init__.py  functions.py  scratch.txt  settings.py  urls.py  views.py  wsgi.py
Project_Django_Boilerplate_GAP/templates/: login.html  profile.html
Project_Django_Boilerplate_GAP/templatetags/: Project_Django_Boilerplate_Gap_Extras.py
django/: .env  Dockerfile  README.md  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml
django/App_CRUD/: apps.py  forms.py  models.py  urls.py  views_CRUD.py
django/Project_Django_Boilerplate_GAP/: asgi.py  settings.py  views.py  wsgi.py
django/media/: .dumb
k8s/django/: django-app-deployment.yaml  django-app-ingress.yaml  django-app-service.yaml
k8s/keycloak/: README.md  README2.md  backup_kc.sh  kc-configmap.yml  kc-deployment.yml  kc-ingress.yml  kc-service.yml  log_kc_top.sh
keycloak/: Save_Live_ Keycloak_Config.txt  default_realm.json  default_realm_k8.json  default_realm_large.json  default_realm_origional.json  generate_cookie_secret.sh  hosts  update_hosts_file.sh
static/css/: boilerplate.css
(+34 files in other folders)
