[tool.poetry]
name = "Django-Boilerplate-Gap"
version = "0.1.0"
description = ""
authors = ["njcalderone <112025653+njcalderone@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "Project_Django_Boilerplate_Gap"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-allauth = "^0.51.0"
django-environ = "^0.9.0"
python-keycloak = "^2.5.0"
djangorestframework-simplejwt = "^5.2.0"
dj-rest-auth = "^2.2.5"
django-extensions = "^3.2.1"
django-sslserver = "^0.22"
python-decouple = "^3.6"
psycopg2-binary = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
